# new-life

./: .env.example  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/: achievement_api.py  family_api.py  game_api.py  inheritance_api.py  legal_api.py  mainline_api.py  person_api.py  rules_api.py  save_api.py  timeline_api.py
backend/app/application/: game_command_service.py  life_progress_service.py  save_migration_service.py  save_service.py
backend/app/engine/: event_bus.py  module_runner.py  result_collector.py  simulation_context.py  simulation_engine.py
backend/app/infrastructure/: config.py  database.py  errors.py  rng.py
backend/app/rules/: models.py  (+14 more)
backend/scripts/: init_db.py
backend/tests/: conftest.py  test_achievement_system.py  test_backend_authority.py  test_death_flow.py  test_education_career_system.py  test_family_system.py  test_health_endpoint.py  test_health_system.py  test_inheritance_flow.py  test_inheritance_settlement.py  test_legal_system.py  test_local_defaults.py  test_mainline_system.py  test_module_boundaries.py  test_narrative_system.py  test_postgres_persistence.py  test_random_event_effects.py  test_random_event_library_v1.py  test_random_event_probability_guard.py  test_romance_system.py  test_rule_system.py  test_simulation_engine.py  test_social_event_library.py  test_social_system.py  test_sqlite_persistence.py  test_timeline_replay_system.py
backend/tools/: build_legal_event_library_v1.py  build_random_event_library_v1.py  patch_family_v1_events.py
(+145 files in other folders)
