[project]
name = "text-life-sim-backend"
version = "0.1.0"
description = "Server-authoritative backend scaffold for a text life simulation game."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "pydantic>=2.7.0",
    "sqlalchemy>=2.0.0",
    "psycopg[binary]>=3.1.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
